--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div id="wrapper">
       <div class="container">
-        <img src="Bleach Character.png" alt="Bleach" id="back-ground" />
-        <img src="ichigo.png" alt="ichigo" id="fore-ground" />
+        <img src="Images/Bleach Character.png" alt="Bleach" id="back-ground" />
+        <img src="Images/ichigo.png" alt="ichigo" id="fore-ground" />
         <h1>Soul Society</h1>
       </div>
 
